packages/end-user/src/css/components/_float-label.scss
// FLOAT LABELS
$float-label-input-padding-top: $input-padding-vertical + $spacing-xs;
$float-label-input-padding-bottom: $input-padding-vertical - $spacing-xs;

.float-label {
    > input {
        width: 100%;
    }

    position: relative;
    display: block;
}

.float-label__label {
        color: $input-placeholder-color;

        transition: 0.05s;

        display: block;
        position: absolute;
        font-size: 10px;
        font-family: $font-default;

        top: 0;
        left: 0;
        right: 0;
        margin-top: $spacing-xs + 1px;
        margin-left: $spacing-sm;

        pointer-events: none;
        z-index: 0;

        cursor: text;
}

.float-label {
    :-ms-input-placeholder {
        color: rgba(0, 0, 0, 0);
    }
}

.float-label__input, .float-label .float-label__input {
    padding-top: $float-label-input-padding-top;
    padding-bottom: $float-label-input-padding-bottom;

    &::placeholder {
        color: rgba(0, 0, 0, 0);
    }
}

.float-label__input:focus + .float-label__label {
    color: $input-focus-border-color;
}

@mixin placeholderShown {
    padding-top: $input-padding-vertical;
    padding-bottom: $input-padding-vertical;
    padding-left: $spacing-sm;

    & + .float-label__label {
        margin-top: $input-padding-vertical + 1px;
        margin-left: $input-padding-horizontal + 1px;
    }
}

.placeholder-shown {
    .float-label__input {
        @include placeholderShown;
    }

    .float-label__label {
        margin-top: $input-padding-vertical + 1px;
        @extend %input-text;
        font-weight: $input-font-weight;
        text-transform: none;
    }
}

input:-webkit-autofill ~ .float-label__label,
input:-webkit-autofill:hover ~ .float-label__label,
input:-webkit-autofill:focus ~ .float-label__label,
input:-webkit-autofill:active ~ .float-label__label {
    color: $input-focus-border-color;
}

